--- a/views/partials/favorite-block.handlebars
+++ b/views/partials/favorite-block.handlebars
@@ -1,6 +1,6 @@
 <li>
 	<br>
-	{{dbArticle_title}}
+	{{Article_title}}
 <br><br>
 
 	<button  class="change-favorite" data-id="{{id}}" data-newfavorite="{{favorited}}">
